# service-now-table-compare

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
config/: example.table_map.json
example.env/: preprod.env
